# fastapi_studying

./: .gitignore
my_fapi_project/: pyproject.toml
my_fapi_project/my_fapi_project/: data.py  greet_async_uvicorn.py  hello.py  hello00.py  hello01.py  hello02.py  hello03.py  hello04.py  model.py  response.py  web.py
