[tool.poetry]
name = "my-fapi-project"
version = "0.1.0"
description = ""
authors = ["Andrew <balshowandrew@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.8.0"
pytest = "^8.3.3"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
httpie = "^3.2.3"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
